[package]
name = "simulator"
version = "0.1.0"
authors = ["Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"

[lib]
name = "simulator"
path = "src/lib.rs"

[dependencies]
env_logger = "*"
log = "*"
time = "*"
toml = "*"
serde = "*"
serde_derive = "*"
serde-aux = "*"
core_affinity = "*"
rand  = "*"
zipf = "*"
