[package]
name = "client"
version = "0.1.0"
authors = ["Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/client.rs"

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
time = "*"
toml = "*"
serde = "*"
serde_derive = "*"
serde-aux = "*"
core_affinity = "*"
rand  = "*"
